fix app layout issue, limit list height and made it scroll

--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ body {
 
 .main-container {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
 
@@ -46,6 +46,8 @@ h4 {
   text-align: justify;
   list-style: none;
   border: black 3px solid;
+  max-height: 450px;
+  overflow: scroll;
 }
 
 .scores-list li {
